flink: avro class generation + job config management

--- a/sensor-digestion-flink/src/main/resources/application.conf
+++ b/sensor-digestion-flink/src/main/resources/application.conf
@@ -7,11 +7,9 @@ base {
 }
 
 flink.stream {
-    group.id = "org.digitalpanda.flink.sensor.digestion.DigestionJob"
-    topic.input.raw-measure = "org.digitalpanda.measure.raw-1-sec"
+    job-name = "digestion-job"
+    checkpoint.period-millis = 3600000
 
-    checkpoint {
-        period-millis = 3600000
-        folder-name= "digestion-job"
-    }
+    topic.input.raw-measure = "org.digitalpanda.measure.raw-1-sec"
+    avg-window.size-sec = 60
 }
