flink: kafka keyed record producer sink

--- a/sensor-digestion-flink/src/main/resources/application.conf
+++ b/sensor-digestion-flink/src/main/resources/application.conf
@@ -11,5 +11,6 @@ flink.stream {
     checkpoint.period-millis = 3600000
 
     topic.input.raw-measure = "org.digitalpanda.measure.raw-1-sec"
+    topic.output.processed-measure = "org.digitalpanda.measure.processed-1-min"
     avg-window.size-sec = 60
 }
