flink: Parametrize measure digestion for multiple average windows from config file

--- a/sensor-digestion-flink/src/main/resources/application.conf
+++ b/sensor-digestion-flink/src/main/resources/application.conf
@@ -10,7 +10,28 @@ flink.stream {
     job-name = "digestion-job"
     checkpoint.period-millis = 3600000
 
-    topic.input.raw-measure = "org.digitalpanda.measure.raw-1-sec"
-    topic.output.processed-measure = "org.digitalpanda.measure.processed-1-min"
-    avg-window.size-sec = 60
+    average-digests = {
+        size = 3
+        0 = {
+            topic = {
+                input = "org.digitalpanda.measure.raw-1-sec"
+                output = "org.digitalpanda.measure.processed-1-min"
+            }
+            window-size-sec = 60
+        }
+        1 = {
+            topic = {
+                input = "org.digitalpanda.measure.processed-1-min"
+                output = "org.digitalpanda.measure.processed-1-hour"
+            }
+            window-size-sec = 3600
+        }
+        2 = {
+            topic = {
+                input = "org.digitalpanda.measure.processed-1-hour"
+                output = "org.digitalpanda.measure.processed-6-hour"
+            }
+            window-size-sec = 21600
+        }
+    }
 }
