wip-flink: adapt stream output for cassandra sink process.

--- a/sensor-digestion-flink/src/main/resources/application.conf
+++ b/sensor-digestion-flink/src/main/resources/application.conf
@@ -10,11 +10,16 @@ flink.stream {
     job-name = "digestion-job"
     checkpoint.period-millis = 3600000
 
+    raw-metric-pre-processor.topic = {
+        input = "org.digitalpanda.measure.raw-1-sec"
+        output = "org.digitalpanda.measure.processed-1-min"
+    }
+
     average-digests = {
         size = 3
         0 = {
             topic = {
-                input = "org.digitalpanda.measure.raw-1-sec"
+                input = "org.digitalpanda.measure.processed-1-sec"
                 output = "org.digitalpanda.measure.processed-1-min"
             }
             window-size-sec = 60
